[gd_scene load_steps=6 format=3 uid="uid://cobpgy1m7dprw"]

[ext_resource type="Script" path="res://Scripts/GameScreens.gd" id="1_18758"]
[ext_resource type="Texture2D" uid="uid://bxod6ne7tx4f8" path="res://Art/play_again.png" id="2_knkub"]
[ext_resource type="Texture2D" uid="uid://b212vnm2v83h8" path="res://Art/play.png" id="3_by7oq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsuwm"]

[sub_resource type="LabelSettings" id="LabelSettings_bhdo7"]

[node name="GameScreens" type="CanvasLayer"]
script = ExtResource("1_18758")

[node name="EndGameScreen" type="Node2D" parent="."]
visible = false
position = Vector2(112, 30)

[node name="PanelContainer" type="PanelContainer" parent="EndGameScreen"]
modulate = Color(0.749085, 0.242246, 0.272609, 1)
offset_left = -3.0
offset_top = 23.0
offset_right = 417.0
offset_bottom = 250.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsuwm")
metadata/_edit_use_anchors_ = true

[node name="RestartSprite" type="Sprite2D" parent="EndGameScreen"]
position = Vector2(193, 200)
texture = ExtResource("2_knkub")
region_enabled = true
region_rect = Rect2(21, 18, 89, 35)

[node name="RestartButton" type="Button" parent="EndGameScreen/RestartSprite"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -39.0
offset_top = -10.0
offset_right = 39.0
offset_bottom = 10.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="EndGameScreen"]
offset_left = 24.0
offset_top = 34.0
offset_right = 395.0
offset_bottom = 161.0
text = " Oh no! 
you held your breath too long and you fainted
Luckily,  you can crawl back to your safe place!
Try your best again to reach the safe city
 and get the medicine!"
label_settings = SubResource("LabelSettings_bhdo7")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartGameScreen" type="Node2D" parent="."]
position = Vector2(387, 175)

[node name="PanelContainer" type="PanelContainer" parent="StartGameScreen"]
modulate = Color(0.749085, 0.242246, 0.272609, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -113.5
offset_right = 210.0
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsuwm")
metadata/_edit_use_anchors_ = true

[node name="RestartSprite" type="Sprite2D" parent="StartGameScreen"]
position = Vector2(2, 84)
texture = ExtResource("3_by7oq")
region_enabled = true
region_rect = Rect2(21, 20, 88, 30)

[node name="PlayButton" type="Button" parent="StartGameScreen/RestartSprite"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -39.0
offset_top = -9.0
offset_right = 39.0
offset_bottom = 11.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="StartGameScreen"]
anchors_preset = -1
anchor_left = -0.0296875
anchor_top = -0.05
anchor_right = 0.0296875
anchor_bottom = 0.0375
offset_left = -185.0
offset_top = -97.0
offset_right = 195.0
offset_bottom = 56.0
text = "You are stranded on an alien planet.
Your grandma is sick and need some medicine.
Hurry! You have only one breath on the outside!
Collect resourses, build roads, and find a way
to the city to get the precious medicaments!
Good luck!"
label_settings = SubResource("LabelSettings_bhdo7")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="EndGameScreen/RestartSprite/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="StartGameScreen/RestartSprite/PlayButton" to="." method="_on_play_button_pressed"]
